# vice-city-clean

./: .gitignore  .gitmodules  CUSTOM_FEATURES.md  README.md  conanfile.py  debian.Dockerfile
android/launcher/: .gitignore  settings.gradle
android/launcher/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
android/launcher/app/src/main/: AndroidManifest.xml
android/launcher/app/src/main/java/com/revc/game/: MainActivity.java
android/launcher/app/src/main/java/org/libsdl/app/: SDLActivity.java
android/launcher/app/src/main/res/values/: strings.xml  themes.xml
android/launcher/app/src/main/res/values-night/: themes.xml
android/launcher/app/src/main/res/xml/: provider_paths.xml
android/launcher/gradle/wrapper/: gradle-wrapper.properties
src/audio/: AudioLogic.cpp  AudioManager.cpp  AudioManager.h  MusicManager.cpp  PolRadio.cpp  audio_enums.h  sampman.h  sampman_oal.cpp
src/collision/: ColTriangle.h  Collision.cpp  CompressedVector.h  VuCollision.cpp  VuCollision.h
src/control/: Darkel.cpp  Garages.cpp  Script.cpp  Script8.cpp  ScriptCommands.h  ScriptDebug.cpp
src/core/: AnimViewer.cpp  Cam.cpp  Camera.cpp  CdStream.h  FileLoader.cpp  Frontend.cpp  Frontend.h  Game.cpp  MenuScreensCustom.cpp  Pad.cpp  Pools.cpp  Timer.h  common.h  config.h  main.cpp  re3.cpp
src/entities/: Entity.cpp
src/math/: Matrix.cpp  Matrix.h  Quaternion.cpp  Quaternion.h  VuVector.cpp
src/modelinfo/: VehicleModelInfo.cpp
src/objects/: ParticleObject.cpp
src/renderer/: MBlur.cpp  Particle.cpp  ParticleMgr.cpp
src/rw/: MemoryMgr.cpp
src/skel/: crossplatform.cpp
src/skel/glfw/: glfw.cpp
src/skel/win/: win.cpp
src/vehicles/: Automobile.h  HandlingMgr.cpp  Vehicle.h
src/weapons/: Weapon.cpp
